--- a/console.html
+++ b/console.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
 </head>
 <body>
     <table>
@@ -64,7 +65,20 @@
         table{height: 36vmin;}
     </style>
     <script>
-        
+        let ws=io.connect(location.href)
+        let id;
+
+        document.querySelectorAll('button').forEach(element => {
+        element.addEventListener('touchstart',e=>{
+            ws.emit('message',{e:"ps",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+        })
+        element.addEventListener('touchend',e=>{
+            ws.emit('message',{e:"pe",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+        })
+        element.addEventListener('touchcancel',e=>{
+            ws.emit('message',{e:"pe",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+        })
+        });
     </script>
 </body>
 </html>
