--- a/console.html
+++ b/console.html
@@ -25,7 +25,20 @@
             <td></td>
         </tr>
     </table>
+    <div id="form" style="background: black; position: absolute; width: 100%; height: 100%; display: none; align-items: center; justify-content: center;">
+        <form action="" method="get">
+            <input type="text" name="id" placeholder="ID" style="
+                background-color: black;
+                color: antiquewhite;
+                font-size: 5vmin;
+                display: block;">
+           <input type="submit" value="GO >" style="
+                background-color: navy;
+                color: orange;
+                font-size: 5vmin;">
+                    </form>
 
+    </div>
     <table>
         <tr>
             <td></td>
