--- a/console.html
+++ b/console.html
@@ -31,7 +31,7 @@
                 background-color: black;
                 color: antiquewhite;
                 font-size: 5vmin;
-                display: block;">
+                display: block;" maxlength="10" required>
            <input type="submit" value="GO >" style="
                 background-color: navy;
                 color: orange;
