--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game">
-        <span id="o" onanimationiteration="this.style.top=Math.random()*100+'%'"></span>
+        <span id="o" onanimationiteration="this.style.top=Math.random()*99+'%'"></span>
     </div>
     <style>
         html,body,#game{
@@ -32,5 +32,12 @@
             to{left: -5%;}
         }
     </style>
+    <script>
+        function reset_animation() {
+        let el = document.getElementById('o');
+        el.style.animation = 'none';
+        el.offsetHeight; 
+         el.style.animation = null; }
+    </script>
 </body>
 </html>
