--- a/console.html
+++ b/console.html
@@ -57,6 +57,11 @@
         </tr>
     </table>
     <style>
+         *{
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
+        }
         html,body{
             height: 100%;
             width: 100%;
