--- a/game/index.html
+++ b/game/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <table style="position: relative;height: 100%;background-color: aliceblue;" cellspacing="0">
+    <table style="position: relative;height: 100%;background-color: aliceblue; display: none;" cellspacing="0">
         <tr><td> <b>NAME</b> </td><td> <b>SCORE</b> </td></tr>
     </table>
     <div id="game">
