--- a/console.html
+++ b/console.html
@@ -10,11 +10,11 @@
 <body>
     <table>
         <tr>
-            <td></td>
-            <td><button id="Up" style="transform: rotate(-90deg);">></button></td>
-            <td></td>
-        </tr>
-        <tr>
+        <td></td>
+        <td><button id="Up" style="transform: rotate(-90deg);">></button></td>
+        <td></td>
+    </tr>
+    <tr>
             <td><button id="Left" style="transform: rotate(180deg);">></button></td>
             <td></td>
             <td><button id="Right" style="transform: rotate(-1800deg);">></button></td>
@@ -25,18 +25,28 @@
             <td></td>
         </tr>
     </table>
-    <div id="form" style="background: black; position: absolute; width: 100%; height: 100%; display: none; align-items: center; justify-content: center;">
+    <div id="form" style="
+    background: black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+">
         <form action="" method="get">
             <input type="text" name="id" placeholder="ID" style="
-                background-color: black;
-                color: antiquewhite;
-                font-size: 5vmin;
-                display: block;" maxlength="10" required onchange="this.value=this.value.replace(/(\s|-|\\|\/|\*|\+|\%|\&|\||\!)+/g,'_')">
-           <input type="submit" value="GO >" style="
-                background-color: navy;
-                color: orange;
-                font-size: 5vmin;">
-                    </form>
+    background-color: black;
+    color: antiquewhite;
+    font-size: 5vmin;
+    display: block;
+" maxlength="10" required onchange="this.value=this.value.replace(/(\s|-|\\|\/|\*|\+|\%|\&|\||\!)+/g,'_')">
+            <input type="submit" value="GO >" style="
+    background-color: navy;
+    color: orange;
+    font-size: 5vmin;
+">
+        </form>
 
     </div>
     <table>
@@ -57,7 +67,7 @@
         </tr>
     </table>
     <style>
-         *{
+        *{
         -webkit-user-select: none; /* Safari */
         -ms-user-select: none; /* IE 10 and IE 11 */
         user-select: none; /* Standard syntax */
@@ -90,12 +100,10 @@
          document.getElementById('form').style.display='none'
     
         }
-        else {
-         ws={emit : function () {alert('NOT CONECTED!')}}}
+        else{ ws={emit : function () {alert('NOT CONECTED!')}} }
 
         ws.emit('d',id)
 
-        
         document.querySelectorAll('button').forEach(element => {
         element.addEventListener('touchstart',e=>{
             ws.emit('message',{e:"ps",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
