--- a/game/index.html
+++ b/game/index.html
@@ -42,7 +42,8 @@
             display: block;
             width: 5vh;
             height: 5vh;
-        }
+            border: 1px solid black;
+       }
         @keyframes slide {
             from{left:105%}
             to{left: -5%;}
