--- a/test/docs.html
+++ b/test/docs.html
@@ -95,12 +95,21 @@
             )
             </code>
         </pre>
+        <h3>Connecting To The Computer</h3>
+        Run The following command on a Command Prompt:
+        <pre><code>
+        <span style="color: rgb(0, 80, 255);">node</span> index.js
+        </code></pre>
+        Connect to the URL displayed 
+        <pre><code >
+        CONNECT TO: <u><b>http://127.0.0.1:100</b></u>
+        </code></pre>
     </div>
     <style>
         code{display: block;
-            color: gray;
-            background-color: #343434;}
-            *{font-size: 1vh}
+            color: white;
+            background-color: #171717;}
+            *{font-size: 3vh}
     </style>
     <script>
         document.body.onload=hljs.highlightAll
