--- a/test/docs.html
+++ b/test/docs.html
@@ -96,9 +96,14 @@
             </code>
         </pre>
         <h3>Connecting To The Computer</h3>
-        Run The following command on a Command Prompt:
+        Open a Command Prompt: <br>
+        Run the command
         <pre><code>
-        <span style="color: rgb(0, 80, 255);">node</span> index.js
+            C://Users/admin> cd Directory/To/The/console
+        </code></pre>
+        Then Run
+        <pre><code>
+        node index.js
         </code></pre>
         Connect to the URL displayed 
         <pre><code >
