--- a/console.html
+++ b/console.html
@@ -7,7 +7,7 @@
     <title>Controller</title>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
 </head>
-<body>
+<body onclick="this.requestFullscreen()">
     <table>
         <tr>
         <td></td>
