--- a/console.html
+++ b/console.html
@@ -35,7 +35,7 @@
     justify-content: center;
 ">
         <form action="" method="get">
-            <input type="text" name="id" placeholder="ID" style="
+            <input type="text" name="id" placeholder="NAME" style="
     background-color: black;
     color: antiquewhite;
     font-size: 5vmin;
