--- a/console.html
+++ b/console.html
@@ -50,6 +50,22 @@
 
     </div>
     <table>
+    	<tr>
+    		<td><button style="color:aquamarine; font-size:4vmin" id="b1" >B1</button></td>
+    		<td></td>
+      		<td><button style="color:khaki; font-size:4vmin" id="b2" >B2</button></td>
+      	</tr>
+      	<tr>
+      	<td></td>
+      	<td></td>
+      	<td></td>
+      	</tr>
+      	<tr>
+      	<td><button style="color:violet; font-size:4vmin" id="b3" >B3</button></td>
+      	<td></td>
+      	<td><button style="color:lightcoral; font-size:4vmin" id="b4" >B4</button></td>
+      	</tr>
+    <table>
         <tr>
             <td></td>
             <td><button style="color: yellow;" id="Y">Y</button></td>
