--- a/console.html
+++ b/console.html
@@ -53,15 +53,15 @@
     	<tr>
     		<td><button style="color:aquamarine; font-size:4vmin" id="b1" >B1</button></td>
     		<td></td>
-      		<td><button style="color:khaki; font-size:4vmin" id="b2" >B2</button></td>
+      		<td><button style="color:violet; font-size:4vmin" id="b2" >B2</button></td>
       	</tr>
       	<tr>
       	<td></td>
-      	<td></td>
+      	<td><button style="color:silver; font-size:4vmin" id="b5" >B5</button></td>
       	<td></td>
       	</tr>
       	<tr>
-      	<td><button style="color:violet; font-size:4vmin" id="b3" >B3</button></td>
+      	<td><button style="color:khaki; font-size:4vmin" id="b3" >B3</button></td>
       	<td></td>
       	<td><button style="color:lightcoral; font-size:4vmin" id="b4" >B4</button></td>
       	</tr>
@@ -69,7 +69,7 @@
         <tr>
             <td></td>
             <td><button style="color: yellow;" id="Y">Y</button></td>
-            <td></td>
+            <td></td>ko
         </tr>
         <tr>
             <td><button style="color: blue;" id="X">X</button></td>
