--- a/console.html
+++ b/console.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Controller</title>
-    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
 </head>
 <body onclick="this.requestFullscreen()">
     <table>
@@ -110,25 +109,25 @@
     </style>
     <script>
         let id=new URL(location.href).searchParams.get('id');
-        let ws;
+        function emit(data){
+        let xhr = new XMLHttpRequest();
+        xhr.open("POST", location.href , true);
+        xhr.setRequestHeader("Content-Type", "application/json");
+        xhr.send(  JSON.stringify( data ))}
+	
         if (id) {
-         ws=io.connect(location.href)
          document.getElementById('form').style.display='none'
-    
         }
-        else{ ws={emit : function () {alert('NOT CONECTED!')}} }
-
-        ws.emit('d',id)
 
         document.querySelectorAll('button').forEach(element => {
         element.addEventListener('touchstart',e=>{
-            ws.emit('message',{e:"ps",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+            emit( {e:"ps",key:e.target.id,id:id}  )
         })
         element.addEventListener('touchend',e=>{
-            ws.emit('message',{e:"pe",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+            emit( {e:"pe",key:e.target.id,id:id}  )
         })
         element.addEventListener('touchcancel',e=>{
-            ws.emit('message',{e:"pe",key:e.target.id,code:e.target.id.charCodeAt(0),id:id})
+            emit( {e:"pe",key:e.target.id,id:id}  )
         })
         });
     </script>
