--- a/console.html
+++ b/console.html
@@ -114,6 +114,7 @@
         xhr.open("POST", location.href , true);
         xhr.setRequestHeader("Content-Type", "application/json");
         xhr.send(  JSON.stringify( data ))
+	document.getElementById('click').playbackRate=2
         document.getElementById('click').play()
         }
 	
